<resources>
    <string name="app_name">sinsungo</string>
    <string name="app_name_kor">신선고</string>

    <!-- 공통 -->
    <string name="all_refrigerator">냉장고</string>
    <string name="all_diet">식단</string>
    <string name="all_recipe">레시피</string>
    <string name="all_notification">알림</string>
    <string name="all_shopping_basket">장바구니</string>
    <string name="all_mypage">마이페이지</string>
    <string name="all_material">재료</string>
    <string name="all_expiration_date">유통기한</string>
    <string name="all_store_date">보관기한</string>
    <string name="all_gram">g</string>
    <string name="all_ml">ml</string>
    <string name="all_unit">개</string>
    <string name="all_img_description">이미지가 로딩되지 않았습니다. </string>
    <string name="all_save">저장</string>

    <!-- 버튼 -->
    <string name="btn_add">추가하기</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_accept">확인</string>

    <!-- 커스텀 다이얼로그 -->
    <string name="dial_ref_title_add">냉장고 재료 추가</string>
    <string name="dial_ref_title_modify">냉장고 재료 수정</string>
    <string name="dial_shop_title">장바구니 목록 추가</string>
    <string name="dial_add">추가</string>
    <string name="dial_modify">수정</string>
    <string name="dial_ingredient">재료</string>
    <string name="dial_count">수량</string>
    <string name="dial_memo">메모</string>
    <string name="dial_hint_ingredient">재료명을 입력해주세요.</string>
    <string name="dial_hint_count">수량을 입력해주세요.</string>
    <string name="dial_hint_date">날짜를 입력해주세요.</string>
    <string name="dial_hint_memo">내용을 작성해주세요.</string>
    <string name="dial_hint_diet_memo">간단한 메모를 작성해주세요. (예. 아침, 점심, 저녁)</string>
    <string name="dial_normal_essential">* 필수 입력사항</string>
    <string name="dial_exdate_mismatch_regex">* 형식에 맞게 입력하세요 (yyyy.MM.dd)</string>
    <string name="dial_notice_essential">필수로 입력하셔야 합니다.</string>
    <string name="dial_date">날짜</string>
    <string-array name="dial_day_types">
        <item>아침</item>
        <item>점심</item>
        <item>저녁</item>
    </string-array>
    <string name="dial_morning">아침</string>
    <string name="dial_lunch">점심</string>
    <string name="dial_dinner">저녁</string>
    <string name="dial_menu">메뉴</string>
    <string name="dial_exdate">유통기한</string>
    <string name="dial_make_date">제조일자</string>
    <string name="dial_storage_date">보관일자</string>
    <string name="dial_hint_edit_menu">#메뉴 이름</string>
    <string-array name="dial_count_types">
        <item>g</item>
        <item>ml</item>
        <item>개</item>
    </string-array>
    <string-array name="dial_exdate_types">
        <item>유통기한</item>
        <item>제조일자</item>
        <item>보관일자</item>
    </string-array>

    <!-- 냉장고 -->
    <string-array name="ref_categories">
        <item>냉장</item>
        <item>냉동</item>
        <item>신선</item>
        <item>상온</item>
        <item>조미료/양념</item>
    </string-array>
    <string name="ref_sortby_name">재료명 순</string>
    <string name="ref_sortby_fresh">신선도 순</string>
    <string name="ref_sortby_recent">최근 추가 순</string>
    <string name="ref_category_cold">냉장</string>
    <string name="ref_category_iced">냉동</string>
    <string name="ref_category_fresh">신선</string>
    <string name="ref_category_indoor">상온</string>
    <string name="ref_category_seasoning">조미료/양념</string>
    <string name="ref_custom_edit">직접 입력</string>
    <string name="ref_scan_receipt">영수증 촬영</string>
    <string name="ref_picture_ingredient">재료 촬영</string>
    <string name="ref_empty_message">냉장고에 재료를 먼저 넣어주세요!</string>
    <string name="ref_format_count_unit">%d %s</string>
    <string name="ref_format_until_exdate">%s까지 %d일 남았어요!</string>
    <string name="ref_format_over_exdate">%s에서 %d일 지났어요!</string>

    <!-- 식단 -->
    <string name="diet_no_ingredient">사용하는 재료가 없습니다.</string>
    <string name="diet_main_ingredient">주재료: </string>
    <string name="diet_empty_message">식단을 먼저 짜주세요!</string>
    <string name="diet_use_ingredient">사용재료</string>
    <string name="diet_custom_edit">직접 입력</string>
    <string name="diet_add_edit">레시피에서 추가하기</string>

    <!-- 레시피 -->
    <string name="reci_hint_search">검색어를 입력해주세요.</string>
    <string name="reci_in_refrigerator">냉장고 속 재료</string>
    <string name="reci_not_in_refrigerator">냉장고에 없는 재료</string>
    <string name="reci_add_diet">식단에 추가하기</string>
    <string name="reci_watch_recipe">레시피보기</string>
    <string name="reci_empty_message">검색 조건과 일치하는 레시피가 없습니다.</string>

    <!-- 레시피 다이얼로그 -->
    <string name="reci_dialog_new_diet">새 식단 추가</string>
    <string name="reci_dialog_old_diet">기존 식단에 추가</string>

    <!-- 장바구니 -->
    <string name="shop_morning">아침 식단의 재료</string>
    <string name="shop_lunch">점심 식단의 재료</string>
    <string name="shop_dinner">저녁 식단의 재료</string>
    <string name="shop_often_ingredient">자주 사용하는 재료</string>
    <string name="shop_list_title">장 볼 목록</string>
    <string name="shop_empty_message">장보기 목록이 비어있어요!</string>
    <string name="shop_share">공유하기</string>
    <string name="shop_add">장바구니 목록 추가하기</string>
    <string name="shop_modify">장바구니 목록 수정하기</string>

    <!-- 마이페이지 -->
    <string name="my_add_member">초대 코드</string>
    <string name="my_setting_notice">알림 설정</string>
    <string name="my_notify">공지사항</string>
    <string name="my_help">도움말</string>
    <string name="my_contact">개발자와 연락하기</string>
    <string name="my_law">법적고지</string>
    <string name="my_logout">로그아웃</string>
    <string name="my_withdraw">회원 탈퇴</string>
    <string name="my_out_member">멤버 추방</string>

    <!-- 마이페이지 다이얼로그 -->
    <string name="my_dialog_logout">로그아웃 하시겠습니까?</string>
    <string name="my_dialog_withdraw">회원탈퇴 하시겠습니까?\n(냉장고 마스터인 회원이 탈퇴하면 멤버들이 전부 추방됩니다.)</string>
    <string name="my_dialog_out">멤버를 추방하시겠습니까?</string>
    <string name="my_dialog_copy">복사</string>

    <!-- 로그인 타입 -->
    <string name="login_type_kakao">kakao</string>
    <string name="login_type_google">google</string>

    <!-- 영수증 OCR -->
    <string name="ocr_title">영수증 인식</string>
    <string name="ocr_take_picture">촬영</string>
    <string name="ocr_receipt_picture">영수증 촬영</string>
    <string name="ocr_do">인식하기</string>
    <string name="ocr_camera_hint">영수증의 상품항목이 잘 보이게 수직 방향으로 촬영해주세요.</string>
    <string name="ocr_close">닫기</string>
    <string name="ocr_progress_message">인식 중 입니다! 잠시 기다려 주세요...</string>
    <string name="ocr_request_permission">영수증 인식을 위해 카메라 권한이 필요합니다.</string>
    <string name="ocr_denied_permission">카메라 권한을 거부하셨습니다. [설정] -> [권한]에서 허용 가능합니다.</string>
    <string name="ocr_result_add">항목 추가</string>
    <string name="ocr_dialog_add">영수증 항목 추가</string>
    <string name="ocr_result_empty_message">영수증 인식 결과가 없습니다.</string>

    <!-- 튜토리얼 -->
    <string name="tutorial_skip"><u>건너뛰기</u></string>
    <string name="tutorial_invite">초대코드 입력하기</string>
    <string name="tutorial_start">시작하기</string>
    <string name="tutorial_title1">냉장고 재료 등록</string>
    <string name="tutorial_title2">다같이 냉장고 관리</string>
    <string name="tutorial_title3">다같이 식생활 관리</string>
    <string name="tutorial_title_welcome">WELCOME!</string>
    <string name="tutorial_content1">영수증 인식을 활용한 식재료 추가,\n내 손으로 직접 입력,\n신선고에서 냉장고 속 식재료를\n편하게 관리해보세요!</string>
    <string name="tutorial_content2">냉장고 어디에 뭐가 있는지,\n유통기한은 얼마나 남았는지,\n멤버와 함께 신선고에서 확인하세요!</string>
    <string name="tutorial_content3">냉장고 속 재료로 가능한 레시피를 보고,\n멤버와 함께 식단을 짜고,\n부족한 재료는 장바구니에 추가해보세요.\n멤버와 함께 신선고로 편리하게\n식생활을 관리해보세요!</string>
    <string name="tutorial_content_welcome">우리집 냉장고와 식습관 관리,\n이제 신선고로 편리하게 해보세요!</string>
    <string name="tutorial_input_invite">초대코드를 입력해주세요.</string>

    <!-- 알림 -->
    <string name="notification_empty_message">알림이 없습니다.</string>

    <!-- contentDescriptions -->
    <string name="description_kakao_login_btn">카카오 로그인 버튼</string>
    <string name="description_google_login_btn">구글 로그인 버튼</string>
    <string name="description_login_logo">신선고 로그인 로고</string>
    <string name="description_loading_logo">신선고 로딩 로고</string>
    <string name="description_recipe_thumbnail">레시피 썸네일</string>
    <string name="description_back_btn">뒤로가기 버튼</string>
    <string name="description_master_badge">마스터 배지</string>
    <string name="description_member_out_btn">멤버 추방 버튼</string>
    <string name="description_member_profile">멤버 픠로필 아이콘</string>

</resources>
